[package]
name = "tcp-latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.48"
zerocopy = "0.6.1"
nix = "0.23.0"

hdrhistogram = "7.4.0"
humantime = "2.1.0"

structopt = "0.3.25"

mio = { version = "0.8.0", features = ["os-poll", "net"] }

defer = "0.1.0"

crossbeam = "0.8.1"


[profile.release]
lto = "fat"
codegen-units = 1
